Migrate from MongoDB to PostgreSQL

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,5 @@
-MONGO_URI=mongodb://localhost:xxxxx
-MONGO_DB=database-name
+DATABASE_USER=user_name
+DATABASE_PASSWORD=user_password
+DATABASE_HOST=localhost
+DATABASE_PORT=xxxx
+DATABASE_NAME=database_name
