--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,5 @@ DATABASE_PASSWORD=user_password
 DATABASE_HOST=localhost
 DATABASE_PORT=xxxx
 DATABASE_NAME=database_name
+
+JWT_SECRET_KEY=secret_key
