--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,8 @@
 
 /backend/models/__pycache__/
 /backend/routes/__pycache__/
+/backend/config/__pycache__/
+/backend/database/__pycache__/
 /backend/controllers/__pycache__/
+
+
