--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,12 @@ Flask-SQLAlchemy
 Flask-Migrate
 Flask-Bcrypt
 Flask-JWT-Extended
+ipykernel
+scikit-learn
+pandas
+numpy
+matplotlib
+seaborn
+xgboost
+shap
+joblib
